--- a/init.rc
+++ b/init.rc
@@ -12,10 +12,7 @@ loglevel 3
     export ANDROID_ROOT /system
     export ANDROID_ASSETS /system/app
     export ANDROID_DATA /data
-    export ANDROID_CACHE /cache
-    export EXTERNAL_STORAGE /mnt/sdcard
-    export ASEC_MOUNTPOINT /mnt/asec
-    export SD_EXT_DIRECTORY /sd-ext
+    export EXTERNAL_STORAGE /sdcard
     export BOOTCLASSPATH /system/framework/core.jar:/system/framework/ext.jar:/system/framework/framework.jar:/system/framework/android.policy.jar:/system/framework/services.jar
 
 # Backward compatibility
@@ -23,7 +20,7 @@ loglevel 3
     symlink /sys/kernel/debug /d
 
 # Kernel version
-    setprop ro.build.display.id "inxane-littlejth CM kernel"
+    setprop ro.build.display.id "inxane 0.6.2"
 
 # create mountpoints and mount tmpfs on sqlite_stmt_journals
 	mkdir /lib/modules
@@ -47,20 +44,14 @@ loglevel 3
 	insmod /lib/modules/param.ko
 	insmod /lib/modules/btgpio.ko
 
-    mkdir /mnt 0775 root system
-    mkdir /mnt/sdcard 0000 system system
-    symlink /mnt/sdcard /sdcard
+    mkdir /sdcard 0000 system system
     mkdir /system
     mkdir /data 0771 system system
     mkdir /cache 0771 system cache
     mkdir /config 0500 root root
     mkdir /sqlite_stmt_journals 01777 root root
     mount tmpfs tmpfs /sqlite_stmt_journals size=4m
-    mkdir /mnt/secure 0700 root root
-    mkdir /mnt/secure/staging 0700 root root
-    mkdir /mnt/secure/asec 0700 root root
-    mkdir /mnt/asec 0700 root system
-    mount tmpfs tmpfs /mnt/asec mode=0755,gid=1000
+
 
     write /proc/sys/kernel/panic_on_oops 1
     write /proc/sys/kernel/hung_task_timeout_secs 0
@@ -351,11 +342,9 @@ on boot
 ##
 
 ## SDX processes
-
 # install busybox
-	service busybox /sbin/busybox --install -s /bin
-		oneshot
-
+service busybox /sbin/busybox --install -s /bin
+oneshot
 # run custom SDX functions
     service sdx /sbin/sdx.sh
     oneshot
@@ -389,15 +378,11 @@ service servicemanager /system/bin/servicemanager
 service vold /system/bin/vold
     socket vold stream 0660 root mount
 
-service netd /system/bin/netd
-    socket netd stream 0660 root system
-
 # add 2009.12.01
 # akmd service
 service akmd2 /system/bin/akmd2
     enabled
     oneshot
-
 service nexus /system/bin/nexus
     socket nexus stream 0660 root system
     disabled
@@ -564,10 +549,6 @@ service dumpstate /system/bin/dumpstate -s
     disabled
     oneshot
 
- on property:init.svc.dhcpcd=stopped
-        dhcpcd -k eth0
-        start pppd_cdma
-
 # Start IQMSD SecFeature.SPRINT_CIQ
 service iqmsd /system/bin/iqmsd
     disabled
@@ -577,9 +558,6 @@ on property:service.iq.active=1
 
 on property:service.iq.active=0
     stop iqmsd
-
-on property:net.cdma.provision=true
-    start pppd_cdma
 
 # run custom SDX functions
     service datainit /data/init.sh
